Add ModelCheckpoint callback.

--- a/notebooks/ekholabs/kaggle-mnist-challenge-cnn-ReLU.ipynb
+++ b/notebooks/ekholabs/kaggle-mnist-challenge-cnn-ReLU.ipynb
@@ -51,11 +51,13 @@
     "from keras.layers import Flatten, MaxPooling2D, Conv2D, Activation\n",
     "from keras.layers.normalization import BatchNormalization\n",
     "from keras.preprocessing.image import ImageDataGenerator\n",
-    "from keras.callbacks import TensorBoard, LearningRateScheduler\n",
+    "from keras.callbacks import TensorBoard, LearningRateScheduler, ModelCheckpoint\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "import pandas as pd\n",
+    "\n",
+    "import os\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
@@ -74,6 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "outputdir = 'model_output/cnn_ReLU'\n",
     "n_classes = 10\n",
     "\n",
     "raw_data = np.loadtxt('kaggle/datasets/mnist/train.csv', skiprows=1, dtype='int', delimiter=',')\n",
@@ -105,25 +108,25 @@
    "source": [
     "model = Sequential()\n",
     "\n",
-    "model.add(Conv2D(16, 4, padding = 'same', activation ='ReLU_s', input_shape = (28, 28, 1)))\n",
-    "model.add(Conv2D(16, 4, padding = 'same', activation ='ReLU_s'))\n",
+    "model.add(Conv2D(28, 7, padding = 'same', activation ='relu', input_shape = (28, 28, 1)))\n",
+    "model.add(Conv2D(28, 7, padding = 'same', activation ='relu'))\n",
     "model.add(MaxPooling2D(pool_size = (2, 2)))\n",
-    "model.add(Dropout(0.10))\n",
+    "model.add(Dropout(0.25))\n",
     "\n",
-    "model.add(Conv2D(20, 7, padding = 'same', activation ='ReLU_s'))\n",
-    "model.add(Conv2D(20, 7, padding = 'same', activation ='ReLU_s'))\n",
+    "model.add(Conv2D(32, 3, padding = 'same', activation ='relu'))\n",
+    "model.add(Conv2D(32, 3, padding = 'same', activation ='relu'))\n",
     "model.add(MaxPooling2D(pool_size = (2, 2)))\n",
-    "model.add(Dropout(0.10))\n",
+    "model.add(Dropout(0.25))\n",
     "\n",
-    "model.add(Conv2D(28, 2, padding = 'same', activation ='ReLU_s'))\n",
-    "model.add(Conv2D(28, 2, padding = 'same', activation ='ReLU_s'))\n",
-    "model.add(Conv2D(32, 2, activation ='ReLU_s'))\n",
+    "model.add(Conv2D(44, 2, padding = 'same', activation ='relu'))\n",
+    "model.add(Conv2D(44, 2, padding = 'same', activation ='relu'))\n",
+    "model.add(Conv2D(48, 2, activation ='relu'))\n",
     "model.add(MaxPooling2D(pool_size = (2, 2)))\n",
-    "model.add(Dropout(0.10))\n",
+    "model.add(Dropout(0.25))\n",
     "\n",
     "model.add(Flatten())\n",
-    "model.add(Dense(1024, activation = \"ReLU_s\"))\n",
-    "model.add(Dropout(0.15))\n",
+    "model.add(Dense(1024, activation = \"relu\"))\n",
+    "model.add(Dropout(0.25))\n",
     "model.add(Dense(10, activation = \"softmax\"))"
    ]
   },
@@ -159,9 +162,9 @@
     "                            width_shift_range = 0.1,\n",
     "                            rotation_range = 10)\n",
     "\n",
-    "train_generator = train_datagen.flow(X_train, y_train, batch_size = 32)\n",
+    "train_generator = train_datagen.flow(X_train, y_train, batch_size = 64)\n",
     "\n",
-    "validation_generator = test_datagen.flow(X_val, y_val, batch_size = 32)"
+    "validation_generator = test_datagen.flow(X_val, y_val, batch_size = 64)"
    ]
   },
   {
@@ -193,7 +196,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.compile(loss = 'categorical_crossentropy', optimizer = 'adam', metrics = ['accuracy'])"
+    "model.compile(loss = 'categorical_crossentropy', optimizer = 'adam', metrics = ['accuracy'])\n",
+    "modelcheckpoint = ModelCheckpoint(filepath=outputdir+'/weights.{epoch:02d}.hdf5')\n",
+    "\n",
+    "if not os.path.exists(outputdir):\n",
+    "    os.makedirs(outputdir)"
    ]
   },
   {
@@ -209,7 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tensorboard = TensorBoard(\"../logs/lenet-cnn-mnist-relu-30-epochs-EkhoNet8-data-augmentation\")"
+    "tensorboard = TensorBoard(\"../logs/lenet-cnn-mnist-ReLU-30-epochs-EkhoNet8-data-augmentation\")"
    ]
   },
   {
@@ -226,18 +233,35 @@
    "outputs": [],
    "source": [
     "hist = model.fit_generator(train_generator,\n",
-    "                           steps_per_epoch = 2000,\n",
+    "                           steps_per_epoch = 3000,\n",
     "                           epochs = 30,\n",
     "                           verbose = 1,\n",
     "                           validation_data = validation_generator,\n",
-    "                           validation_steps = 500,\n",
-    "                           callbacks = [annealer, tensorboard])\n",
+    "                           validation_steps = 1500,\n",
+    "                           callbacks = [modelcheckpoint])#, annealer, tensorboard])\n",
     "\n",
     "# hist = model.fit(X_train, y_train, batch_size = 32,\n",
-    "#                            epochs = 5,\n",
+    "#                            epochs = 40,\n",
     "#                            verbose = 1,\n",
     "#                            validation_split = 0.1,\n",
-    "#                            callbacks=[annealer])#, tensorboard])"
+    "#                            callbacks=[annealer, tensorboard])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Load Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Zero indexed -> get the epoch with highest accuracy.\n",
+    "saved_model = keras.models.load_model(outputdir + '/weights.25.hdf5')"
    ]
   },
   {
@@ -253,7 +277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_loss, final_acc = model.evaluate(X_val, y_val, verbose = 1)\n",
+    "final_loss, final_acc = saved_model.evaluate(X_val, y_val, verbose = 1)\n",
     "print(\"Final loss: {0:.4f}, final accuracy: {1:.4f}\".format(final_loss, final_acc))"
    ]
   },
@@ -270,13 +294,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# X_test = np.loadtxt('kaggle/datasets/test.csv', skiprows=1, dtype='int', delimiter=',')\n",
-    "# X_test = X_test.reshape(28000, 28, 28, 1).astype('float32') / 255.\n",
+    "X_test = np.loadtxt('kaggle/datasets/mnist/test.csv', skiprows=1, dtype='int', delimiter=',')\n",
+    "X_test = X_test.reshape(28000, 28, 28, 1).astype('float32') / 255.\n",
     "\n",
-    "# predictions = model.predict(X_test, verbose = 2)\n",
-    "# predictions = np.argmax(predictions, axis = 1)\n",
+    "predictions = model.predict(X_test, verbose = 2)\n",
+    "predictions = np.argmax(predictions, axis = 1)\n",
     "\n",
-    "# pd.DataFrame({\"ImageId\": list(range(1, len(predictions) + 1)), \"Label\": predictions}).to_csv('kaggle/results/cnn/submission-relu-30-epochs-EkhoNet8-data-augmentation.csv', index = False, header = True)"
+    "pd.DataFrame({\"ImageId\": list(range(1, len(predictions) + 1)), \"Label\": predictions}).to_csv('kaggle/results/mnist/submission-ReLU-30-epochs-EkhoNet8-data-augmentation.csv', index = False, header = True)"
    ]
   },
   {
