Add new NLP notebooks.

--- a/notebooks/nlp/word2vec.ipynb
+++ b/notebooks/nlp/word2vec.ipynb
@@ -28,7 +28,6 @@
    "outputs": [],
    "source": [
     "import nltk\n",
-    "from nltk import word_tokenize, sent_tokenize\n",
     "import gensim\n",
     "from gensim.models.word2vec import Word2Vec\n",
     "from sklearn.manifold import TSNE\n",
@@ -95,7 +94,7 @@
    "outputs": [],
    "source": [
     "# Due to lack of resources, I'm not working with the full Gutenberg dataset (18 books).\n",
-    "gberg_sent_tokens = sent_tokenize(gutenberg.raw(fileids=['austen-emma.txt', 'austen-persuasion.txt', 'austen-sense.txt', 'carroll-alice.txt']))"
+    "gberg_sent_tokens = sent_tokenize(gutenberg.raw(fileids=['bible-kjv.txt', 'austen-emma.txt', 'austen-persuasion.txt', 'austen-sense.txt', 'carroll-alice.txt']))"
    ]
   },
   {
@@ -141,7 +140,7 @@
    "outputs": [],
    "source": [
     "# Due to lack of resources, I'm not working with the full Gutenberg dataset (18 books).\n",
-    "gberg_sents = gutenberg.sents(fileids=['austen-emma.txt', 'austen-persuasion.txt', 'austen-sense.txt', 'carroll-alice.txt'])"
+    "gberg_sents = gutenberg.sents(fileids=['bible-kjv.txt', 'austen-emma.txt', 'austen-persuasion.txt', 'austen-sense.txt', 'carroll-alice.txt'])"
    ]
   },
   {
@@ -178,7 +177,7 @@
    "outputs": [],
    "source": [
     "# Due to lack of resources, I'm not working with the full Gutenberg dataset (18 books).\n",
-    "len(gutenberg.words(fileids=['austen-emma.txt', 'austen-persuasion.txt', 'austen-sense.txt', 'carroll-alice.txt']))"
+    "len(gutenberg.words(fileids=['bible-kjv.txt', 'austen-emma.txt', 'austen-persuasion.txt', 'austen-sense.txt', 'carroll-alice.txt']))"
    ]
   },
   {
@@ -294,7 +293,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.similarity('father', 'house')"
+    "model.similarity('father', 'mother')"
    ]
   },
   {
@@ -330,7 +329,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.most_similar(positive=['father', 'woman'], negative=['man'], topn=30)"
+    "model.most_similar(positive=['king', 'woman'], negative=['man'], topn=30)"
    ]
   },
   {
@@ -460,7 +459,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subset_df = coords_df.sample(n=500)"
+    "subset_df = coords_df.sample(n=1000)"
    ]
   },
   {
@@ -470,7 +469,7 @@
    "outputs": [],
    "source": [
     "p = figure(plot_width=600, plot_height=600)\n",
-    "_ = p.text(x=subset_df.x, y=subset_df.y, text=subset_df.token)"
+    "p.text(x=subset_df.x, y=subset_df.y, text=subset_df.token)"
    ]
   },
   {
