--- a/notebooks/nlp/deep_net_sentiment_classifier_for_imdb.ipynb
+++ b/notebooks/nlp/deep_net_sentiment_classifier_for_imdb.ipynb
@@ -20,6 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import keras\n",
     "from keras.datasets import imdb\n",
     "from keras.preprocessing.sequence import pad_sequences\n",
@@ -28,6 +29,7 @@
     "from keras.layers import Embedding\n",
     "from keras.callbacks import ModelCheckpoint\n",
     "import os\n",
+    "import sklearn.metrics\n",
     "from sklearn.metrics import roc_auc_score\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -370,7 +372,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.fit(X_train, y_train, batch_size=batch_size, epochs=epochs, verbose=1, validation_data=(X_valid, y_valid))#, callbacks=[modelcheckpoint])"
+    "model.fit(X_train, y_train, batch_size=batch_size, epochs=epochs, verbose=1, validation_split=.3, callbacks=[modelcheckpoint])"
    ]
   },
   {
@@ -386,7 +388,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#model.load_weights(output_dir+'/weights.01.hdf5')"
+    "model.load_weights(output_dir+'/weights.01.hdf5')"
    ]
   },
   {
@@ -404,7 +406,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_hat[0]"
+    "y_hat[0][0], y_hat[1][0]"
    ]
   },
   {
@@ -441,9 +443,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "float_y_hat = []\n",
-    "for y in y_hat:\n",
-    "    float_y_hat.append(y[0])"
+    "fpr, tpr, _ = sklearn.metrics.roc_curve(y_valid, y_hat)\n",
+    "roc_auc = sklearn.metrics.auc(fpr, tpr)\n",
+    "\n",
+    "plt.figure()\n",
+    "lw = 2\n",
+    "plt.plot(fpr, tpr, color='darkorange',\n",
+    "         lw=lw, label='ROC curve (area = %0.2f)' % roc_auc)\n",
+    "\n",
+    "plt.plot([0, 1], [0, 1], color='navy', lw=lw, linestyle='--')\n",
+    "plt.xlim([0.0, 1.0])\n",
+    "plt.ylim([0.0, 1.05])\n",
+    "plt.xlabel('False Positive Rate')\n",
+    "plt.ylabel('True Positive Rate')\n",
+    "plt.title('Receiver Operating Characteristic')\n",
+    "plt.legend(loc=\"lower right\")\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -452,15 +468,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ydf = pd.DataFrame(list(zip(float_y_hat, y_valid)), columns=['y_hat', 'y'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "ydf = pd.DataFrame(list(zip(y_hat[:,0], y_valid)), columns=['y_hat', 'y'])\n",
     "ydf.head(10)"
    ]
   },
