Cleaning up the output and removing unused variables.

--- a/notebooks/nlp/bidirectional_lstm_in_keras.ipynb
+++ b/notebooks/nlp/bidirectional_lstm_in_keras.ipynb
@@ -139,7 +139,7 @@
     "model = Sequential()\n",
     "model.add(Embedding(n_unique_words, n_dim, input_length=max_review_length))\n",
     "model.add(SpatialDropout1D(drop_embed))\n",
-    "model.add(Bidirectional(LSTM(n_lstm, dropout=drop_lstm)))\n",
+    "model.add(Bidirectional(LSTM(n_bilstm, dropout=drop_bilstm)))\n",
     "\n",
     "model.add(Dense(1, activation='sigmoid'))"
    ]
