--- a/notebooks/ekholabs/kaggle-mnist-challenge-cnn-ReLU.ipynb
+++ b/notebooks/ekholabs/kaggle-mnist-challenge-cnn-ReLU.ipynb
@@ -76,21 +76,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outputdir = 'model_output/cnn_ReLU'\n",
     "n_classes = 10\n",
     "\n",
     "raw_data = np.loadtxt('kaggle/datasets/mnist/train.csv', skiprows=1, dtype='int', delimiter=',')\n",
     "X_train, X_val, y_train, y_val = train_test_split(\n",
-    "    raw_data[:,1:], raw_data[:,0], test_size = 0.1)\n",
+    "    raw_data[:,1:], raw_data[:,0], test_size = 0.2)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_train, y_train, test_size=0.2)\n",
     "\n",
     "X_train = X_train.reshape(-1, 28, 28, 1)\n",
     "X_val = X_val.reshape(-1, 28, 28, 1)\n",
+    "X_test = X_test.reshape(-1, 28, 28, 1)\n",
     "\n",
     "X_train = X_train.astype(\"float32\")/255.\n",
     "X_val = X_val.astype(\"float32\")/255.\n",
+    "X_test = X_test.astype(\"float32\")/255.\n",
+    "\n",
     "\n",
     "y_train = keras.utils.to_categorical(y_train, n_classes)\n",
-    "y_val = keras.utils.to_categorical(y_val, n_classes)\n"
+    "y_val = keras.utils.to_categorical(y_val, n_classes)\n",
+    "y_test = keras.utils.to_categorical(y_test, n_classes)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "saved_weights = 'models/mnist/cnn/ReLUs'\n",
+    "output_dir = 'model_output/cnn_ReLUs'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Define Custom Activation Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras import backend as K\n",
+    "from keras.utils.generic_utils import get_custom_objects\n",
+    "\n",
+    "class ReLUs(Activation):\n",
+    "    \n",
+    "    def __init__(self, activation, **kwargs):\n",
+    "        super(ReLUs, self).__init__(activation, **kwargs)\n",
+    "        self.__name__ = 'ReLU_s'\n",
+    "\n",
+    "def relus(Z):\n",
+    "    e_param = 3.8\n",
+    "    pi = K.variable((3.14))\n",
+    "    m = e_param + (K.sigmoid(K.sin(Z)) - K.sigmoid(K.cos(Z)) * K.exp(K.sqrt(pi)))\n",
+    "    A = K.maximum(m, Z)\n",
+    "    return A\n",
+    "\n",
+    "get_custom_objects().update({'ReLU_s': ReLUs(relus)})"
    ]
   },
   {
@@ -197,10 +244,10 @@
    "outputs": [],
    "source": [
     "model.compile(loss = 'categorical_crossentropy', optimizer = 'adam', metrics = ['accuracy'])\n",
-    "modelcheckpoint = ModelCheckpoint(filepath=outputdir+'/weights.{epoch:02d}.hdf5')\n",
+    "modelcheckpoint = ModelCheckpoint(filepath=output_dir+'/weights.{epoch:02d}.hdf5')\n",
     "\n",
-    "if not os.path.exists(outputdir):\n",
-    "    os.makedirs(outputdir)"
+    "if not os.path.exists(output_dir):\n",
+    "    os.makedirs(output_dir)"
    ]
   },
   {
@@ -261,7 +308,7 @@
    "outputs": [],
    "source": [
     "# Zero indexed -> get the epoch with highest accuracy.\n",
-    "saved_model = keras.models.load_model(outputdir + '/weights.25.hdf5')"
+    "saved_model = keras.models.load_model(output_dir + '/weights.19.hdf5') # 19 = 99.85; 22 = 99.83; 25 = 99.85; 26 = 99.85; 31 = 99.85"
    ]
   },
   {
@@ -277,7 +324,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_loss, final_acc = saved_model.evaluate(X_val, y_val, verbose = 1)\n",
+    "final_loss, final_acc = saved_model.evaluate(X_test, y_test, verbose = 1)\n",
     "print(\"Final loss: {0:.4f}, final accuracy: {1:.4f}\".format(final_loss, final_acc))"
    ]
   },
@@ -294,13 +341,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_test = np.loadtxt('kaggle/datasets/mnist/test.csv', skiprows=1, dtype='int', delimiter=',')\n",
-    "X_test = X_test.reshape(28000, 28, 28, 1).astype('float32') / 255.\n",
+    "X_test_sub = np.loadtxt('kaggle/datasets/mnist/test.csv', skiprows=1, dtype='int', delimiter=',')\n",
+    "X_test_sub = X_test_sub.reshape(28000, 28, 28, 1).astype('float32') / 255.\n",
     "\n",
-    "predictions = model.predict(X_test, verbose = 2)\n",
+    "predictions = saved_model.predict(X_test_sub, verbose = 2)\n",
     "predictions = np.argmax(predictions, axis = 1)\n",
     "\n",
-    "pd.DataFrame({\"ImageId\": list(range(1, len(predictions) + 1)), \"Label\": predictions}).to_csv('kaggle/results/mnist/submission-ReLU-30-epochs-EkhoNet8-data-augmentation.csv', index = False, header = True)"
+    "pd.DataFrame({\"ImageId\": list(range(1, len(predictions) + 1)), \"Label\": predictions}).to_csv('kaggle/results/mnist/submission-ReLU-30-9978-epochs-EkhoNet8-data-augmentation.csv', index = False, header = True)"
    ]
   },
   {
