--- a/notebooks/ekholabs/kaggle-mnist-challenge-cnn-ReLU.ipynb
+++ b/notebooks/ekholabs/kaggle-mnist-challenge-cnn-ReLU.ipynb
@@ -104,40 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "saved_weights = 'models/mnist/cnn/ReLUs'\n",
-    "output_dir = 'model_output/cnn_ReLUs'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Define Custom Activation Function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from keras import backend as K\n",
-    "from keras.utils.generic_utils import get_custom_objects\n",
-    "\n",
-    "class ReLUs(Activation):\n",
-    "    \n",
-    "    def __init__(self, activation, **kwargs):\n",
-    "        super(ReLUs, self).__init__(activation, **kwargs)\n",
-    "        self.__name__ = 'ReLU_s'\n",
-    "\n",
-    "def relus(Z):\n",
-    "    e_param = 3.8\n",
-    "    pi = K.variable((3.14))\n",
-    "    m = e_param + (K.sigmoid(K.sin(Z)) - K.sigmoid(K.cos(Z)) * K.exp(K.sqrt(pi)))\n",
-    "    A = K.maximum(m, Z)\n",
-    "    return A\n",
-    "\n",
-    "get_custom_objects().update({'ReLU_s': ReLUs(relus)})"
+    "output_dir = 'model_output/multi-conv'"
    ]
   },
   {
@@ -209,9 +176,9 @@
     "                            width_shift_range = 0.1,\n",
     "                            rotation_range = 10)\n",
     "\n",
-    "train_generator = train_datagen.flow(X_train, y_train, batch_size = 64)\n",
+    "train_generator = train_datagen.flow(X_train, y_train, batch_size = 128)\n",
     "\n",
-    "validation_generator = test_datagen.flow(X_val, y_val, batch_size = 64)"
+    "validation_generator = test_datagen.flow(X_val, y_val, batch_size = 128)"
    ]
   },
   {
@@ -285,7 +252,7 @@
     "                           verbose = 1,\n",
     "                           validation_data = validation_generator,\n",
     "                           validation_steps = 1500,\n",
-    "                           callbacks = [modelcheckpoint])#, annealer, tensorboard])\n",
+    "                           callbacks = [modelcheckpoint, annealer])#, tensorboard])\n",
     "\n",
     "# hist = model.fit(X_train, y_train, batch_size = 32,\n",
     "#                            epochs = 40,\n",
@@ -308,7 +275,7 @@
    "outputs": [],
    "source": [
     "# Zero indexed -> get the epoch with highest accuracy.\n",
-    "saved_model = keras.models.load_model(output_dir + '/weights.19.hdf5') # 19 = 99.85; 22 = 99.83; 25 = 99.85; 26 = 99.85; 31 = 99.85"
+    "saved_model = keras.models.load_model(output_dir + '/weights-multicnn-toxicity.hdf5') # 19 = 99.85; 22 = 99.83; 25 = 99.85; 26 = 99.85; 31 = 99.85"
    ]
   },
   {
@@ -374,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
