--- a/notebooks/nlp/conv_net_sentiment_classifier_for_imdb.ipynb
+++ b/notebooks/nlp/conv_net_sentiment_classifier_for_imdb.ipynb
@@ -26,8 +26,9 @@
     "from keras.models import Sequential\n",
     "from keras.layers import Dense, Flatten, Dropout, Activation\n",
     "from keras.layers import Embedding, Conv1D, SpatialDropout1D, GlobalMaxPool1D\n",
-    "from keras.callbacks import ModelCheckpoint\n",
+    "from keras.callbacks import ModelCheckpoint, TensorBoard, EarlyStopping\n",
     "import os\n",
+    "import sklearn.metrics\n",
     "from sklearn.metrics import roc_auc_score\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -49,21 +50,22 @@
    "source": [
     "output_dir = 'model_output/conv'\n",
     "\n",
-    "epochs = 4\n",
-    "batch_size = 128\n",
+    "e_param = 2.2\n",
+    "epochs = 10\n",
+    "batch_size = 64\n",
+    "patience = 2\n",
+    "val_split = .2\n",
     "\n",
-    "n_dim = 64\n",
-    "n_unique_words = 5000\n",
-    "n_words_to_skip = 50\n",
-    "max_review_length = 400\n",
+    "n_dim = 192\n",
+    "n_unique_words = 20000\n",
+    "max_review_length = 200\n",
     "pad_type = trunc_type = 'pre'\n",
-    "drop_embed = 0.2\n",
+    "\n",
+    "n_conv = 128\n",
+    "k_conv = 3\n",
     "\n",
     "n_dense = 256\n",
-    "dropout = 0.2\n",
-    "\n",
-    "n_conv = 256\n",
-    "k_conv = 3"
+    "dropout = 0.5"
    ]
   },
   {
@@ -103,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Design Deep Net Architecture"
+    "#### Design Conv Net Architecture"
    ]
   },
   {
@@ -114,7 +116,6 @@
    "source": [
     "model = Sequential()\n",
     "model.add(Embedding(n_unique_words, n_dim, input_length=max_review_length))\n",
-    "model.add(SpatialDropout1D(drop_embed))\n",
     "model.add(Conv1D(n_conv, k_conv, activation='relu'))\n",
     "model.add(GlobalMaxPool1D())\n",
     "model.add(Dense(n_dense, activation='relu'))\n",
@@ -153,7 +154,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "modelcheckpoint = ModelCheckpoint(filepath=output_dir+'/weights.{epoch:02d}.hdf5')"
+    "modelCheckpoint = ModelCheckpoint(filepath=output_dir + '/best-cnn-imdb-model.hdf5', save_best_only=True, mode='min')\n",
+    "earlyStopping = EarlyStopping(mode='min', patience=patience)\n",
+    "\n",
+    "if not os.path.exists(output_dir):\n",
+    "    os.makedirs(output_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### TensorBoard"
    ]
   },
   {
@@ -162,8 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if not os.path.exists(output_dir):\n",
-    "    os.makedirs(output_dir)"
+    "tensorboard = TensorBoard(\"../logs/imdb-cnn-relus\")"
    ]
   },
   {
@@ -179,7 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.fit(X_train, y_train, batch_size=batch_size, epochs=epochs, verbose=1, validation_data=(X_valid, y_valid))#, callbacks=[modelcheckpoint])"
+    "model.fit(X_train, y_train, batch_size=batch_size, epochs=epochs, verbose=1, validation_split=val_split, callbacks=[modelCheckpoint, earlyStopping])#, tensorboard])"
    ]
   },
   {
@@ -195,7 +206,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#model.load_weights(output_dir+'/weights.01.hdf5')"
+    "model.load_weights(output_dir+'/best-cnn-imdb-model.hdf5')"
    ]
   },
   {
@@ -205,15 +216,6 @@
    "outputs": [],
    "source": [
     "y_hat = model.predict_proba(X_valid)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_hat[0]"
    ]
   },
   {
@@ -249,6 +251,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "fpr, tpr, _ = sklearn.metrics.roc_curve(y_valid, y_hat)\n",
+    "roc_auc = sklearn.metrics.auc(fpr, tpr)\n",
+    "\n",
+    "plt.figure()\n",
+    "lw = 2\n",
+    "plt.plot(fpr, tpr, color='darkorange',\n",
+    "         lw=lw, label='ROC curve (area = %0.2f)' % roc_auc)\n",
+    "\n",
+    "plt.plot([0, 1], [0, 1], color='navy', lw=lw, linestyle='--')\n",
+    "plt.xlim([0.0, 1.0])\n",
+    "plt.ylim([0.0, 1.05])\n",
+    "plt.xlabel('False Positive Rate')\n",
+    "plt.ylabel('True Positive Rate')\n",
+    "plt.title('Receiver Operating Characteristic')\n",
+    "plt.legend(loc=\"lower right\")\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -268,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
