--- a/notebooks/nlp/deep_net_sentiment_classifier_for_imdb.ipynb
+++ b/notebooks/nlp/deep_net_sentiment_classifier_for_imdb.ipynb
@@ -27,7 +27,7 @@
     "from keras.models import Sequential\n",
     "from keras.layers import Dense, Flatten, Dropout, Activation\n",
     "from keras.layers import Embedding\n",
-    "from keras.callbacks import ModelCheckpoint\n",
+    "from keras.callbacks import ModelCheckpoint, EarlyStopping, TensorBoard\n",
     "import os\n",
     "import sklearn.metrics\n",
     "from sklearn.metrics import roc_auc_score\n",
@@ -51,17 +51,19 @@
    "source": [
     "output_dir = 'model_output/dense'\n",
     "\n",
-    "epochs = 4\n",
-    "batch_size = 128\n",
+    "e_param = 4.8\n",
+    "epochs = 10\n",
+    "batch_size = 64\n",
+    "patience = 2\n",
+    "val_split = .2\n",
     "\n",
-    "n_dim = 64\n",
-    "n_unique_words = 5000\n",
-    "n_words_to_skip = 50\n",
-    "max_review_length = 100\n",
+    "n_dim = 128\n",
+    "n_unique_words = 20000\n",
+    "max_review_length = 200\n",
     "pad_type = trunc_type = 'pre'\n",
     "\n",
     "n_dense = 64\n",
-    "dropout = 0.5"
+    "dropout = .5"
    ]
   },
   {
@@ -77,25 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(X_train, y_train), (X_valid, y_valid) = imdb.load_data(num_words=n_unique_words, skip_top=n_words_to_skip)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train[0:6]"
+    "(X_train, y_train), (X_valid, y_valid) = imdb.load_data(num_words=n_unique_words)"
    ]
   },
   {
@@ -223,15 +207,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train[0:6]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "for x in X_train[0:6]:\n",
     "    print(len(x))"
    ]
@@ -346,7 +321,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "modelcheckpoint = ModelCheckpoint(filepath=output_dir+'/weights.{epoch:02d}.hdf5')"
+    "modelCheckpoint = ModelCheckpoint(filepath=output_dir + '/best-imdb-deep-net-model.hdf5', save_best_only=True, mode='min')\n",
+    "earlyStopping = EarlyStopping(mode='min', patience=patience)\n",
+    "\n",
+    "if not os.path.exists(output_dir):\n",
+    "    os.makedirs(output_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### TensorBoard"
    ]
   },
   {
@@ -355,8 +341,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if not os.path.exists(output_dir):\n",
-    "    os.makedirs(output_dir)"
+    "tensorboard = TensorBoard(\"../logs/imdb-deep-net-relus\")"
    ]
   },
   {
@@ -372,7 +357,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.fit(X_train, y_train, batch_size=batch_size, epochs=epochs, verbose=1, validation_split=.3, callbacks=[modelcheckpoint])"
+    "model.fit(X_train, y_train, batch_size=batch_size, epochs=epochs, verbose=1, validation_split=val_split, callbacks=[modelCheckpoint, earlyStopping])#, tensorboard])"
    ]
   },
   {
@@ -388,7 +373,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.load_weights(output_dir+'/weights.01.hdf5')"
+    "model = keras.models.load_model(output_dir + '/best-imdb-deep-net-model.hdf5')"
    ]
   },
   {
@@ -398,15 +383,6 @@
    "outputs": [],
    "source": [
     "y_hat = model.predict_proba(X_valid)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_hat[0][0], y_hat[1][0]"
    ]
   },
   {
@@ -505,7 +481,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "' '.join(index_word[id] for id in all_X_valid[25])"
+    "' '.join(index_word[id] for id in all_X_valid[112])"
    ]
   },
   {
@@ -523,7 +499,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "' '.join(index_word[id] for id in all_X_valid[151])"
+    "' '.join(index_word[id] for id in all_X_valid[101])"
    ]
   },
   {
@@ -550,7 +526,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
