--- a/notebooks/nlp/vanilla_lstm_in_keras.ipynb
+++ b/notebooks/nlp/vanilla_lstm_in_keras.ipynb
@@ -26,8 +26,9 @@
     "from keras.models import Sequential\n",
     "from keras.layers import Embedding, Dense, Flatten, Dropout, Activation, SpatialDropout1D\n",
     "from keras.layers import LSTM\n",
-    "from keras.callbacks import ModelCheckpoint\n",
+    "from keras.callbacks import ModelCheckpoint, EarlyStopping, TensorBoard\n",
     "import os\n",
+    "import sklearn.metrics\n",
     "from sklearn.metrics import roc_auc_score\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -49,17 +50,19 @@
    "source": [
     "output_dir = 'model_output/vanillaLSTM'\n",
     "\n",
-    "epochs = 4\n",
-    "batch_size = 128\n",
+    "e_param = 0.006\n",
+    "epochs = 10\n",
+    "batch_size = 64\n",
+    "patience = 2\n",
+    "val_split = .2\n",
     "\n",
-    "n_dim = 64\n",
-    "n_unique_words = 10000 \n",
-    "max_review_length = 100\n",
+    "n_dim = 256\n",
+    "n_unique_words = 20000\n",
+    "max_review_length = 300\n",
     "pad_type = trunc_type = 'pre'\n",
-    "drop_embed = 0.2 \n",
     "\n",
-    "n_lstm = 256 \n",
-    "drop_lstm = 0.2"
+    "n_lstm = 128 \n",
+    "drop_lstm = 0.5"
    ]
   },
   {
@@ -99,34 +102,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Custom Activation Function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from keras import backend as K\n",
-    "from keras.utils.generic_utils import get_custom_objects\n",
-    "\n",
-    "def relus(Z):\n",
-    "#     e_param = 0.006 #0.006: 87% AUC; 83% accuracy; validation_split=30%\n",
-    "#     e_param = 0.005 #0.005: 86% AUC; 92% accuracy; validation_split=30%\n",
-    "    e_param = 0.005 #0.006: 87% AUC; 83% accuracy; validation_split=30%\n",
-    "    pi = K.variable((3.14))\n",
-    "    m = e_param + (K.sigmoid(K.sin(Z)) - K.sigmoid(K.cos(Z)) * K.exp(K.sqrt(pi)))\n",
-    "    A = K.maximum(m, Z)\n",
-    "    return A\n",
-    "\n",
-    "get_custom_objects().update({'ReLU_s': Activation(relus)})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Design Deep Net Architecture"
    ]
   },
@@ -138,7 +113,6 @@
    "source": [
     "model = Sequential()\n",
     "model.add(Embedding(n_unique_words, n_dim, input_length=max_review_length))\n",
-    "model.add(SpatialDropout1D(drop_embed))\n",
     "model.add(LSTM(n_lstm, dropout=drop_lstm))\n",
     "\n",
     "model.add(Dense(1, activation='sigmoid'))"
@@ -175,7 +149,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "modelcheckpoint = ModelCheckpoint(filepath=output_dir+'/weights.{epoch:02d}.hdf5')"
+    "modelCheckpoint = ModelCheckpoint(filepath=output_dir + '/best-imdb-lstm-model.hdf5', save_best_only=True, mode='min')\n",
+    "earlyStopping = EarlyStopping(mode='min', patience=patience)\n",
+    "\n",
+    "if not os.path.exists(output_dir):\n",
+    "    os.makedirs(output_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### TensorBoard"
    ]
   },
   {
@@ -184,8 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if not os.path.exists(output_dir):\n",
-    "    os.makedirs(output_dir)"
+    "tensorboard = TensorBoard(\"../logs/imdb-lstm-relus\")"
    ]
   },
   {
@@ -201,7 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.fit(X_train, y_train, batch_size=batch_size, epochs=epochs, verbose=1, validation_split=0.3)#, callbacks=[modelcheckpoint])"
+    "model.fit(X_train, y_train, batch_size=batch_size, epochs=epochs, verbose=1, validation_split=val_split, callbacks=[modelCheckpoint, earlyStopping, tensorboard])"
    ]
   },
   {
@@ -217,8 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#model.load_weights(output_dir+'/weights.03.hdf5')\n",
-    "print('Not loading weights.')"
+    "model = keras.models.load_model(output_dir + '/best-imdb-lstm-model.hdf5')"
    ]
   },
   {
@@ -228,15 +211,6 @@
    "outputs": [],
    "source": [
     "y_hat = model.predict_proba(X_valid)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_hat[0]"
    ]
   },
   {
@@ -272,6 +246,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "fpr, tpr, _ = sklearn.metrics.roc_curve(y_valid, y_hat)\n",
+    "roc_auc = sklearn.metrics.auc(fpr, tpr)\n",
+    "\n",
+    "plt.figure()\n",
+    "lw = 2\n",
+    "plt.plot(fpr, tpr, color='darkorange',\n",
+    "         lw=lw, label='ROC curve (area = %0.2f)' % roc_auc)\n",
+    "\n",
+    "plt.plot([0, 1], [0, 1], color='navy', lw=lw, linestyle='--')\n",
+    "plt.xlim([0.0, 1.0])\n",
+    "plt.ylim([0.0, 1.05])\n",
+    "plt.xlabel('False Positive Rate')\n",
+    "plt.ylabel('True Positive Rate')\n",
+    "plt.title('Receiver Operating Characteristic')\n",
+    "plt.legend(loc=\"lower right\")\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -291,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
