--- a/notebooks/nlp/word2vec.ipynb
+++ b/notebooks/nlp/word2vec.ipynb
@@ -28,6 +28,7 @@
    "outputs": [],
    "source": [
     "import nltk\n",
+    "from nltk.tokenize import word_tokenize, sent_tokenize\n",
     "import gensim\n",
     "from gensim.models.word2vec import Word2Vec\n",
     "from sklearn.manifold import TSNE\n",
@@ -505,7 +506,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
