--- a/notebooks/keras/conv-net-in-keras.ipynb
+++ b/notebooks/keras/conv-net-in-keras.ipynb
@@ -134,7 +134,7 @@
     "        self.__name__ = 'relus'\n",
     "\n",
     "def relus(Z):\n",
-    "    e_param = 10**-5\n",
+    "    e_param = 10**-8\n",
     "    pi = K.variable((3.14))\n",
     "    m = e_param * (K.sigmoid(K.sin(Z)) - K.sigmoid(K.cos(Z)) * K.exp(K.sqrt(pi)))\n",
     "    A = K.maximum(m, Z)\n",
@@ -248,7 +248,7 @@
     "if not os.path.exists('model_output'):\n",
     "    os.makedirs('model_output')\n",
     "\n",
-    "tensorboard = TensorBoard(\"../logs/convnet-mnist-relus-II\")"
+    "tensorboard = TensorBoard(\"../logs/convnet-mnist-relus-III\")"
    ]
   },
   {
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -285,26 +285,76 @@
      "text": [
       "Train on 54000 samples, validate on 6000 samples\n",
       "Epoch 1/30\n",
-      "54000/54000 [==============================] - 412s 8ms/step - loss: 0.3358 - acc: 0.8876 - val_loss: 0.0618 - val_acc: 0.9827\n",
+      "54000/54000 [==============================] - 460s 9ms/step - loss: 0.3422 - acc: 0.8860 - val_loss: 0.0561 - val_acc: 0.9837\n",
       "Epoch 2/30\n",
-      "54000/54000 [==============================] - 419s 8ms/step - loss: 0.0836 - acc: 0.9746 - val_loss: 0.0356 - val_acc: 0.9893\n",
+      "54000/54000 [==============================] - 453s 8ms/step - loss: 0.0848 - acc: 0.9743 - val_loss: 0.0326 - val_acc: 0.9902\n",
       "Epoch 3/30\n",
-      "54000/54000 [==============================] - 435s 8ms/step - loss: 0.0631 - acc: 0.9809 - val_loss: 0.0295 - val_acc: 0.9920\n",
+      "54000/54000 [==============================] - 475s 9ms/step - loss: 0.0623 - acc: 0.9814 - val_loss: 0.0316 - val_acc: 0.9908\n",
       "Epoch 4/30\n",
-      "54000/54000 [==============================] - 422s 8ms/step - loss: 0.0517 - acc: 0.9849 - val_loss: 0.0273 - val_acc: 0.9918\n",
+      "54000/54000 [==============================] - 479s 9ms/step - loss: 0.0518 - acc: 0.9842 - val_loss: 0.0268 - val_acc: 0.9928\n",
       "Epoch 5/30\n",
-      "54000/54000 [==============================] - 3245s 60ms/step - loss: 0.0453 - acc: 0.9861 - val_loss: 0.0230 - val_acc: 0.9938\n",
+      "54000/54000 [==============================] - 478s 9ms/step - loss: 0.0453 - acc: 0.9866 - val_loss: 0.0270 - val_acc: 0.9915\n",
       "Epoch 6/30\n",
-      "54000/54000 [==============================] - 460s 9ms/step - loss: 0.0390 - acc: 0.9882 - val_loss: 0.0305 - val_acc: 0.9920\n",
+      "54000/54000 [==============================] - 497s 9ms/step - loss: 0.0396 - acc: 0.9879 - val_loss: 0.0227 - val_acc: 0.9923\n",
       "Epoch 7/30\n",
-      "54000/54000 [==============================] - 465s 9ms/step - loss: 0.0392 - acc: 0.9879 - val_loss: 0.0236 - val_acc: 0.9932\n",
+      "54000/54000 [==============================] - 509s 9ms/step - loss: 0.0386 - acc: 0.9882 - val_loss: 0.0242 - val_acc: 0.9927\n",
       "Epoch 8/30\n",
-      "54000/54000 [==============================] - 462s 9ms/step - loss: 0.0330 - acc: 0.9900 - val_loss: 0.0271 - val_acc: 0.9932\n",
+      "54000/54000 [==============================] - 503s 9ms/step - loss: 0.0357 - acc: 0.9890 - val_loss: 0.0240 - val_acc: 0.9937\n",
       "Epoch 9/30\n",
-      "54000/54000 [==============================] - 467s 9ms/step - loss: 0.0314 - acc: 0.9903 - val_loss: 0.0251 - val_acc: 0.9942\n",
+      "54000/54000 [==============================] - 478s 9ms/step - loss: 0.0321 - acc: 0.9900 - val_loss: 0.0214 - val_acc: 0.9942\n",
       "Epoch 10/30\n",
-      "33664/54000 [=================>............] - ETA: 2:51 - loss: 0.0295 - acc: 0.9906"
+      "54000/54000 [==============================] - 510s 9ms/step - loss: 0.0293 - acc: 0.9909 - val_loss: 0.0245 - val_acc: 0.9928\n",
+      "Epoch 11/30\n",
+      "54000/54000 [==============================] - 507s 9ms/step - loss: 0.0286 - acc: 0.9907 - val_loss: 0.0215 - val_acc: 0.9945\n",
+      "Epoch 12/30\n",
+      "54000/54000 [==============================] - 478s 9ms/step - loss: 0.0282 - acc: 0.9914 - val_loss: 0.0196 - val_acc: 0.9953\n",
+      "Epoch 13/30\n",
+      "54000/54000 [==============================] - 477s 9ms/step - loss: 0.0251 - acc: 0.9920 - val_loss: 0.0219 - val_acc: 0.9945\n",
+      "Epoch 14/30\n",
+      "54000/54000 [==============================] - 497s 9ms/step - loss: 0.0229 - acc: 0.9927 - val_loss: 0.0236 - val_acc: 0.9945\n",
+      "Epoch 15/30\n",
+      "54000/54000 [==============================] - 485s 9ms/step - loss: 0.0262 - acc: 0.9919 - val_loss: 0.0254 - val_acc: 0.9933\n",
+      "Epoch 16/30\n",
+      "54000/54000 [==============================] - 475s 9ms/step - loss: 0.0232 - acc: 0.9925 - val_loss: 0.0241 - val_acc: 0.9930\n",
+      "Epoch 17/30\n",
+      "54000/54000 [==============================] - 437s 8ms/step - loss: 0.0232 - acc: 0.9931 - val_loss: 0.0230 - val_acc: 0.9938\n",
+      "Epoch 18/30\n",
+      "54000/54000 [==============================] - 472s 9ms/step - loss: 0.0214 - acc: 0.9930 - val_loss: 0.0253 - val_acc: 0.9942\n",
+      "Epoch 19/30\n",
+      "54000/54000 [==============================] - 456s 8ms/step - loss: 0.0219 - acc: 0.9931 - val_loss: 0.0292 - val_acc: 0.9928\n",
+      "Epoch 20/30\n",
+      "54000/54000 [==============================] - 451s 8ms/step - loss: 0.0209 - acc: 0.9936 - val_loss: 0.0240 - val_acc: 0.9935\n",
+      "Epoch 21/30\n",
+      "54000/54000 [==============================] - 458s 8ms/step - loss: 0.0222 - acc: 0.9932 - val_loss: 0.0209 - val_acc: 0.9957\n",
+      "Epoch 22/30\n",
+      "54000/54000 [==============================] - 451s 8ms/step - loss: 0.0200 - acc: 0.9935 - val_loss: 0.0203 - val_acc: 0.9952\n",
+      "Epoch 23/30\n",
+      "54000/54000 [==============================] - 431s 8ms/step - loss: 0.0213 - acc: 0.9938 - val_loss: 0.0192 - val_acc: 0.9948\n",
+      "Epoch 24/30\n",
+      "54000/54000 [==============================] - 427s 8ms/step - loss: 0.0178 - acc: 0.9944 - val_loss: 0.0206 - val_acc: 0.9947\n",
+      "Epoch 25/30\n",
+      "54000/54000 [==============================] - 428s 8ms/step - loss: 0.0183 - acc: 0.9944 - val_loss: 0.0239 - val_acc: 0.9950\n",
+      "Epoch 26/30\n",
+      "54000/54000 [==============================] - 427s 8ms/step - loss: 0.0183 - acc: 0.9941 - val_loss: 0.0182 - val_acc: 0.9952\n",
+      "Epoch 27/30\n",
+      "54000/54000 [==============================] - 430s 8ms/step - loss: 0.0187 - acc: 0.9937 - val_loss: 0.0199 - val_acc: 0.9950\n",
+      "Epoch 28/30\n",
+      "54000/54000 [==============================] - 430s 8ms/step - loss: 0.0189 - acc: 0.9943 - val_loss: 0.0217 - val_acc: 0.9940\n",
+      "Epoch 29/30\n",
+      "54000/54000 [==============================] - 430s 8ms/step - loss: 0.0181 - acc: 0.9944 - val_loss: 0.0249 - val_acc: 0.9940\n",
+      "Epoch 30/30\n",
+      "54000/54000 [==============================] - 427s 8ms/step - loss: 0.0198 - acc: 0.9939 - val_loss: 0.0264 - val_acc: 0.9942\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7f1813c63f98>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -321,9 +371,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7 2 1 ..., 4 5 6]\n"
+     ]
+    }
+   ],
    "source": [
     "saved_model = keras.models.load_model('model_output/weights-cnn-mnist.hdf5')\n",
     "predictions = saved_model.predict_classes(X_test, verbose = 2)\n",
@@ -339,21 +397,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000/10000 [==============================] - 30s 3ms/step\n",
+      "Final loss: 0.0183, final accuracy: 0.9946\n"
+     ]
+    }
+   ],
    "source": [
-    "final_loss, final_acc = model.evaluate(X_test, y_test, verbose = 1)\n",
+    "final_loss, final_acc = saved_model.evaluate(X_test, y_test, verbose = 1)\n",
     "print(\"Final loss: {0:.4f}, final accuracy: {1:.4f}\".format(final_loss, final_acc))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Final loss: 0.0204, final accuracy: 0.9940 (e = 0.0001)"
+    "#Final loss: 0.0204, final accuracy: 0.9940 (e = 0.001)"
    ]
   }
  ],
