--- a/notebooks/keras/intermediate-net-in-keras.ipynb
+++ b/notebooks/keras/intermediate-net-in-keras.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,19 +40,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n",
-      "/opt/conda/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: compiletime version 3.5 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.6\n",
-      "  return f(*args, **kwds)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import keras\n",
@@ -71,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,27 +117,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from keras import backend as K\n",
+    "from keras.engine import Layer\n",
     "from keras.utils.generic_utils import get_custom_objects\n",
     "\n",
-    "class ReLUs(Activation):\n",
-    "    \n",
-    "    def __init__(self, activation, **kwargs):\n",
-    "        super(ReLUs, self).__init__(activation, **kwargs)\n",
-    "        self.__name__ = 'relus'\n",
+    "class SineReLU(Layer):\n",
     "\n",
-    "def relus(Z):\n",
-    "    e_param = 0.001 #the best so far -> 0.0085\n",
-    "    pi = K.variable((3.14))\n",
-    "    m = e_param * (K.sigmoid(K.sin(Z)) - K.sigmoid(K.cos(Z)) * K.exp(K.sqrt(pi)))\n",
-    "    A = K.maximum(m, Z)\n",
-    "    return A\n",
+    "    def __init__(self, epsilon=0.0055, **kwargs):\n",
+    "        super(SineReLU, self).__init__(**kwargs)\n",
+    "        self.supports_masking = True\n",
+    "        self.epsilon = K.cast_to_floatx(epsilon)\n",
     "\n",
-    "get_custom_objects().update({'relus': ReLUs(relus)})"
+    "    def build(self, input_shape):\n",
+    "        self.scale = np.exp(np.sqrt(np.pi))\n",
+    "        super(SineReLU, self).build(input_shape)\n",
+    "\n",
+    "    def call(self, Z):\n",
+    "        m = self.epsilon * (K.sigmoid(K.sin(Z)) - K.sigmoid(K.cos(Z)) * self.scale)\n",
+    "        A = K.maximum(m, Z)\n",
+    "        return A\n",
+    "\n",
+    "    def get_config(self):\n",
+    "        config = {'epsilon': float(self.epsilon)}\n",
+    "        base_config = super(SineReLU, self).get_config()\n",
+    "        return dict(list(base_config.items()) + list(config.items()))\n",
+    "\n",
+    "    def compute_output_shape(self, input_shape):\n",
+    "        return input_shape"
    ]
   },
   {
@@ -159,62 +159,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = Sequential()\n",
-    "model.add(Dense(128, activation = 'linear', kernel_initializer='glorot_uniform', input_shape = (784,)))\n",
-    "model.add(LeakyReLU(alpha=0.0085))\n",
+    "model.add(Dense(128, input_shape = (784,)))\n",
+    "model.add(SineReLU(epsilon=0.0083))\n",
     "model.add(Dropout(0.2))\n",
-    "model.add(Dense(256, activation = 'linear', kernel_initializer='glorot_uniform'))\n",
-    "model.add(LeakyReLU(alpha=0.0085))\n",
+    "\n",
+    "model.add(Dense(256))\n",
+    "model.add(SineReLU(epsilon=0.0083))\n",
     "model.add(Dropout(0.3))\n",
-    "model.add(Dense(1024, activation = 'linear', kernel_initializer='glorot_uniform'))\n",
-    "model.add(LeakyReLU(alpha=0.0085))\n",
+    "\n",
+    "model.add(Dense(1024))\n",
+    "model.add(SineReLU(epsilon=0.0083))\n",
     "model.add(Dropout(0.5))\n",
     "model.add(Dense(10, activation = 'softmax'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "dense_1 (Dense)              (None, 128)               100480    \n",
-      "_________________________________________________________________\n",
-      "leaky_re_lu_1 (LeakyReLU)    (None, 128)               0         \n",
-      "_________________________________________________________________\n",
-      "dropout_1 (Dropout)          (None, 128)               0         \n",
-      "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 256)               33024     \n",
-      "_________________________________________________________________\n",
-      "leaky_re_lu_2 (LeakyReLU)    (None, 256)               0         \n",
-      "_________________________________________________________________\n",
-      "dropout_2 (Dropout)          (None, 256)               0         \n",
-      "_________________________________________________________________\n",
-      "dense_3 (Dense)              (None, 1024)              263168    \n",
-      "_________________________________________________________________\n",
-      "leaky_re_lu_3 (LeakyReLU)    (None, 1024)              0         \n",
-      "_________________________________________________________________\n",
-      "dropout_3 (Dropout)          (None, 1024)              0         \n",
-      "_________________________________________________________________\n",
-      "dense_4 (Dense)              (None, 10)                10250     \n",
-      "=================================================================\n",
-      "Total params: 406,922\n",
-      "Trainable params: 406,922\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.summary()"
    ]
@@ -228,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +208,7 @@
     "if not os.path.exists('model_output'):\n",
     "    os.makedirs('model_output')\n",
     "    \n",
-    "tensorboard = TensorBoard(\"../logs/deepnet-mnist-leaky-relu-II\")"
+    "tensorboard = TensorBoard(\"../logs/deepnet-mnist-relus-native-VII\")"
    ]
   },
   {
@@ -252,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,106 +236,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train on 54000 samples, validate on 6000 samples\n",
-      "Epoch 1/50\n",
-      "54000/54000 [==============================] - 6s 110us/step - loss: 0.3950 - acc: 0.8771 - val_loss: 0.1162 - val_acc: 0.9652\n",
-      "Epoch 2/50\n",
-      "54000/54000 [==============================] - 6s 102us/step - loss: 0.1767 - acc: 0.9471 - val_loss: 0.0972 - val_acc: 0.9708\n",
-      "Epoch 3/50\n",
-      "54000/54000 [==============================] - 5s 101us/step - loss: 0.1358 - acc: 0.9588 - val_loss: 0.0823 - val_acc: 0.9745\n",
-      "Epoch 4/50\n",
-      "54000/54000 [==============================] - 6s 109us/step - loss: 0.1142 - acc: 0.9652 - val_loss: 0.0817 - val_acc: 0.9757\n",
-      "Epoch 5/50\n",
-      "54000/54000 [==============================] - 5s 90us/step - loss: 0.0992 - acc: 0.9702 - val_loss: 0.0773 - val_acc: 0.9760\n",
-      "Epoch 6/50\n",
-      "54000/54000 [==============================] - 5s 91us/step - loss: 0.0876 - acc: 0.9731 - val_loss: 0.0722 - val_acc: 0.9793\n",
-      "Epoch 7/50\n",
-      "54000/54000 [==============================] - 5s 93us/step - loss: 0.0815 - acc: 0.9743 - val_loss: 0.0594 - val_acc: 0.9825\n",
-      "Epoch 8/50\n",
-      "54000/54000 [==============================] - 5s 101us/step - loss: 0.0744 - acc: 0.9767 - val_loss: 0.0684 - val_acc: 0.9790\n",
-      "Epoch 9/50\n",
-      "54000/54000 [==============================] - 5s 101us/step - loss: 0.0717 - acc: 0.9776 - val_loss: 0.0609 - val_acc: 0.9818\n",
-      "Epoch 10/50\n",
-      "54000/54000 [==============================] - 6s 107us/step - loss: 0.0683 - acc: 0.9784 - val_loss: 0.0645 - val_acc: 0.9815\n",
-      "Epoch 11/50\n",
-      "54000/54000 [==============================] - 6s 107us/step - loss: 0.0617 - acc: 0.9802 - val_loss: 0.0689 - val_acc: 0.9790\n",
-      "Epoch 12/50\n",
-      "54000/54000 [==============================] - 5s 94us/step - loss: 0.0617 - acc: 0.9802 - val_loss: 0.0615 - val_acc: 0.9810\n",
-      "Epoch 13/50\n",
-      "54000/54000 [==============================] - 5s 90us/step - loss: 0.0554 - acc: 0.9831 - val_loss: 0.0702 - val_acc: 0.9822\n",
-      "Epoch 14/50\n",
-      "54000/54000 [==============================] - 5s 91us/step - loss: 0.0542 - acc: 0.9827 - val_loss: 0.0613 - val_acc: 0.9823\n",
-      "Epoch 15/50\n",
-      "54000/54000 [==============================] - 5s 99us/step - loss: 0.0509 - acc: 0.9840 - val_loss: 0.0671 - val_acc: 0.9803\n",
-      "Epoch 16/50\n",
-      "54000/54000 [==============================] - 5s 93us/step - loss: 0.0460 - acc: 0.9855 - val_loss: 0.0692 - val_acc: 0.9827\n",
-      "Epoch 17/50\n",
-      "54000/54000 [==============================] - 5s 91us/step - loss: 0.0490 - acc: 0.9845 - val_loss: 0.0739 - val_acc: 0.9800\n",
-      "Epoch 18/50\n",
-      "54000/54000 [==============================] - 5s 90us/step - loss: 0.0484 - acc: 0.9852 - val_loss: 0.0652 - val_acc: 0.9833\n",
-      "Epoch 19/50\n",
-      "54000/54000 [==============================] - 5s 91us/step - loss: 0.0435 - acc: 0.9866 - val_loss: 0.0733 - val_acc: 0.9807\n",
-      "Epoch 20/50\n",
-      "54000/54000 [==============================] - 5s 91us/step - loss: 0.0429 - acc: 0.9863 - val_loss: 0.0692 - val_acc: 0.9828\n",
-      "Epoch 21/50\n",
-      "54000/54000 [==============================] - 5s 93us/step - loss: 0.0422 - acc: 0.9861 - val_loss: 0.0721 - val_acc: 0.9810\n",
-      "Epoch 22/50\n",
-      "54000/54000 [==============================] - 6s 110us/step - loss: 0.0432 - acc: 0.9857 - val_loss: 0.0702 - val_acc: 0.9827\n",
-      "Epoch 23/50\n",
-      "54000/54000 [==============================] - 6s 108us/step - loss: 0.0386 - acc: 0.9878 - val_loss: 0.0746 - val_acc: 0.9818\n",
-      "Epoch 24/50\n",
-      "54000/54000 [==============================] - 5s 91us/step - loss: 0.0397 - acc: 0.9874 - val_loss: 0.0717 - val_acc: 0.9817\n",
-      "Epoch 25/50\n",
-      "54000/54000 [==============================] - 5s 92us/step - loss: 0.0375 - acc: 0.9886 - val_loss: 0.0688 - val_acc: 0.9822\n",
-      "Epoch 26/50\n",
-      "54000/54000 [==============================] - 5s 94us/step - loss: 0.0389 - acc: 0.9876 - val_loss: 0.0765 - val_acc: 0.9807\n",
-      "Epoch 27/50\n",
-      "54000/54000 [==============================] - 5s 97us/step - loss: 0.0364 - acc: 0.9884 - val_loss: 0.0713 - val_acc: 0.9817\n",
-      "Epoch 28/50\n",
-      "54000/54000 [==============================] - 5s 97us/step - loss: 0.0375 - acc: 0.9881 - val_loss: 0.0760 - val_acc: 0.9793\n",
-      "Epoch 29/50\n",
-      "54000/54000 [==============================] - 5s 96us/step - loss: 0.0351 - acc: 0.9893 - val_loss: 0.0754 - val_acc: 0.9807\n",
-      "Epoch 30/50\n",
-      "54000/54000 [==============================] - 5s 92us/step - loss: 0.0326 - acc: 0.9901 - val_loss: 0.0735 - val_acc: 0.9827\n",
-      "Epoch 31/50\n",
-      "54000/54000 [==============================] - 6s 104us/step - loss: 0.0360 - acc: 0.9889 - val_loss: 0.0733 - val_acc: 0.9803\n",
-      "Epoch 32/50\n",
-      "54000/54000 [==============================] - 7s 130us/step - loss: 0.0326 - acc: 0.9893 - val_loss: 0.0781 - val_acc: 0.9810\n",
-      "Epoch 33/50\n",
-      "54000/54000 [==============================] - 6s 105us/step - loss: 0.0329 - acc: 0.9897 - val_loss: 0.0693 - val_acc: 0.9827\n",
-      "Epoch 34/50\n",
-      "54000/54000 [==============================] - 5s 96us/step - loss: 0.0325 - acc: 0.9894 - val_loss: 0.0743 - val_acc: 0.9812\n",
-      "Epoch 35/50\n",
-      "54000/54000 [==============================] - 5s 99us/step - loss: 0.0323 - acc: 0.9902 - val_loss: 0.0781 - val_acc: 0.9817\n",
-      "Epoch 36/50\n",
-      "54000/54000 [==============================] - 5s 91us/step - loss: 0.0330 - acc: 0.9902 - val_loss: 0.0778 - val_acc: 0.9820\n",
-      "Epoch 37/50\n",
-      "54000/54000 [==============================] - 5s 90us/step - loss: 0.0291 - acc: 0.9908 - val_loss: 0.0777 - val_acc: 0.9817\n",
-      "Epoch 38/50\n",
-      "54000/54000 [==============================] - 5s 89us/step - loss: 0.0320 - acc: 0.9896 - val_loss: 0.0698 - val_acc: 0.9830\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x7ff6c4df1c18>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model.fit(X_train, y_train, batch_size = 128, epochs = 50, verbose = 1,\n",
-    "          validation_split = 0.1, callbacks=[modelCheckpoint, earlyStopping, tensorboard])"
+    "history = model.fit(X_train, y_train, batch_size = 128, epochs = 50, verbose = 1,\n",
+    "          validation_split = 0.1, callbacks=[modelCheckpoint, earlyStopping])#, tensorboard])"
    ]
   },
   {
@@ -379,21 +253,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[7 2 1 ..., 4 5 6]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "saved_model = keras.models.load_model('model_output/weights-deepnet-mnist.hdf5')\n",
+    "saved_model = keras.models.load_model('model_output/weights-deepnet-mnist.hdf5', custom_objects={'SineReLU': SineReLU})\n",
     "predictions = saved_model.predict_classes(X_test, verbose = 2)\n",
-    "print(predictions)"
+    "np.std(history.history['loss'])"
    ]
   },
   {
@@ -405,32 +271,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10000/10000 [==============================] - 1s 68us/step\n",
-      "Final loss: 0.0682, final accuracy: 0.9833\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "final_loss, final_acc = saved_model.evaluate(X_test, y_test, verbose = 1)\n",
+    "final_loss, final_acc = model.evaluate(X_test, y_test, verbose = 1)\n",
     "print(\"Final loss: {0:.4f}, final accuracy: {1:.4f}\".format(final_loss, final_acc))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Final loss: 0.0632, final accuracy: 0.9837 -> relus (0.0085)\n",
-    "#Final loss: 0.0749, final accuracy: 0.9835 -> relu"
+    "#Final loss: 0.0765, final accuracy: 0.9833 -> SineReLU (0.0083); STD loss => 0.05375531819714868\n",
+    "#Final loss: 0.0745, final accuracy: 0.9827 -> SineReLU (0.0080); STD loss => 0.05386899405890265\n",
+    "#Final loss: 0.0859, final accuracy: 0.9819 -> SineReLU (0.0085); STD loss => 0.053545432633176175\n",
+    "#Final loss: 0.0729, final accuracy: 0.9819 -> ReLU; STD loss => 0.057364919558005455\n",
+    "#Final loss: 0.0761, final accuracy: 0.9823 -> ReLU; STD loss => 0.057064730691239844\n",
+    "#Final loss: 0.0823, final accuracy: 0.9829 -> ReLU; STD loss => 0.05736969016884351"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
