--- a/notebooks/nlp/deep_net_sentiment_classifier_for_imdb.ipynb
+++ b/notebooks/nlp/deep_net_sentiment_classifier_for_imdb.ipynb
@@ -20,7 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "import os\n",
+    "\n",
     "import keras\n",
     "from keras.datasets import imdb\n",
     "from keras.preprocessing.sequence import pad_sequences\n",
@@ -28,10 +29,14 @@
     "from keras.layers import Dense, Flatten, Dropout, Activation\n",
     "from keras.layers import Embedding\n",
     "from keras.callbacks import ModelCheckpoint, EarlyStopping, TensorBoard\n",
-    "import os\n",
+    "\n",
     "import sklearn.metrics\n",
     "from sklearn.metrics import roc_auc_score\n",
+    "\n",
     "import pandas as pd\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
    ]
@@ -51,11 +56,10 @@
    "source": [
     "output_dir = 'model_output/dense'\n",
     "\n",
-    "e_param = 4.8\n",
-    "epochs = 10\n",
+    "epochs = 5\n",
     "batch_size = 64\n",
-    "patience = 2\n",
-    "val_split = .2\n",
+    "patience = 10\n",
+    "val_split = .3\n",
     "\n",
     "n_dim = 128\n",
     "n_unique_words = 20000\n",
@@ -233,6 +237,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### SineReLU Activation Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras import backend as K\n",
+    "from keras.engine import Layer\n",
+    "from keras.utils.generic_utils import get_custom_objects\n",
+    "\n",
+    "class SineReLU(Layer):\n",
+    "\n",
+    "    def __init__(self, epsilon=0.0055, **kwargs):\n",
+    "        super(SineReLU, self).__init__(**kwargs)\n",
+    "        self.supports_masking = True\n",
+    "        self.epsilon = K.cast_to_floatx(epsilon)\n",
+    "\n",
+    "    def build(self, input_shape):\n",
+    "        self.scale = np.exp(np.sqrt(np.pi))\n",
+    "        super(SineReLU, self).build(input_shape)\n",
+    "\n",
+    "    def call(self, Z):\n",
+    "        m = self.epsilon * (K.sigmoid(K.sin(Z)) - K.sigmoid(K.cos(Z)) * self.scale)\n",
+    "        A = K.maximum(m, Z)\n",
+    "        return A\n",
+    "\n",
+    "    def get_config(self):\n",
+    "        config = {'epsilon': float(self.epsilon)}\n",
+    "        base_config = super(SineReLU, self).get_config()\n",
+    "        return dict(list(base_config.items()) + list(config.items()))\n",
+    "\n",
+    "    def compute_output_shape(self, input_shape):\n",
+    "        return input_shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Design Deep Net Architecture"
    ]
   },
@@ -245,7 +291,11 @@
     "model = Sequential()\n",
     "model.add(Embedding(n_unique_words, n_dim, input_length=max_review_length))\n",
     "model.add(Flatten())\n",
-    "model.add(Dense(n_dense, activation='relu'))\n",
+    "model.add(Dense(n_dense))\n",
+    "model.add(SineReLU(0.0095))\n",
+    "\n",
+    "model.add(Dense(n_dense))\n",
+    "model.add(SineReLU(0.0095))\n",
     "model.add(Dropout(dropout))\n",
     "model.add(Dense(1, activation='sigmoid'))"
    ]
@@ -321,8 +371,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "modelCheckpoint = ModelCheckpoint(filepath=output_dir + '/best-imdb-deep-net-model.hdf5', save_best_only=True, mode='min')\n",
-    "earlyStopping = EarlyStopping(mode='min', patience=patience)\n",
+    "modelCheckpoint = ModelCheckpoint(monitor='val_acc', filepath=output_dir + '/best-imdb-deep-net-model.hdf5', save_best_only=True, mode='max')\n",
+    "earlyStopping = EarlyStopping(monitor='val_acc', mode='max', patience=patience)\n",
     "\n",
     "if not os.path.exists(output_dir):\n",
     "    os.makedirs(output_dir)"
@@ -357,7 +407,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.fit(X_train, y_train, batch_size=batch_size, epochs=epochs, verbose=1, validation_split=val_split, callbacks=[modelCheckpoint, earlyStopping])#, tensorboard])"
+    "history = model.fit(X_train, y_train, batch_size=batch_size, epochs=epochs, verbose=1, validation_split=val_split, callbacks=[modelCheckpoint, earlyStopping])#, tensorboard])"
    ]
   },
   {
@@ -373,7 +423,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = keras.models.load_model(output_dir + '/best-imdb-deep-net-model.hdf5')"
+    "model = keras.models.load_model(output_dir + '/best-imdb-deep-net-model.hdf5', custom_objects={'SineReLU': SineReLU})"
    ]
   },
   {
@@ -382,7 +432,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_hat = model.predict_proba(X_valid)"
+    "y_hat = model.predict_proba(X_valid)\n",
+    "final_loss, final_acc = model.evaluate(X_valid, y_valid, verbose = 1)\n",
+    "print(\"Final loss: {0:.4f}, final accuracy: {1:.4f}\".format(final_loss, final_acc))"
    ]
   },
   {
@@ -410,7 +462,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'{:0.2f}'.format(pct_auc)"
+    "print('{:0.2f}'.format(pct_auc))\n",
+    "print(np.std(history.history['loss']))"
    ]
   },
   {
